# database_project

./: Cargo.toml  README.md
src/: http_status.rs  jump_page.rs  main.rs
src/backends/: add_client_data.rs  add_order.rs  add_purchase_data.rs  add_receivables_data.rs  client_data.rs  client_month_money_all_data.rs  client_purchase_data.rs  client_week_money_all_data.rs  delete_client_data.rs  delete_receivables_data.rs  library.rs  login.rs  modify_client_modify_data.rs  modify_client_search_data.rs  modify_receivables_data.rs  modify_receivables_search_data.rs  month_allclient_data.rs  month_client_data.rs  search_allamountorder_data.rs  search_allorder_data.rs  search_client_data.rs  search_delete_client_data.rs  search_order_data.rs  search_personalorder_data.rs  search_receivables_data.rs  supplier_day_money_all_data.rs  supplier_day_product_data_all_data.rs  supplier_day_product_purchase_data.rs  supplier_day_totalmoney_data.rs  supplier_week_product_data_all_data.rs  supplier_week_product_purchase_data.rs  supplier_week_totalmoney_data.rs  week_all_client_money_all_data.rs  week_allclient_data.rs  week_client_data.rs  week_client_money_all_data.rs
src/css/: styles.css  styles1.css  styles2.css  styles3.css  styles4.css  styles404.css  styles5.css  styles6.css  styles7.css  styles8.css  styles9.css
src/html/: 404.html  loginPage.html  mainpage.html  permission_denied.html
src/html/all_interface/: all_interface.html  client_month_money_all.html  client_week_money_all.html  supplier_day_money_all.html  supplier_day_product_data_all.html  (+4 more)
(+27 files in other folders)
