[package]
name = "databaseweb"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
actix-files = "0.6.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
mysql = "20.0.0"
actix-session = "0.5.0"
rand = "0.8"
chrono = "0.4"
actix-multipart = "0.4"
futures = "0.3"
base64 = "0.13"